build: run tests on module path
Signed-off-by: Jendrik Johannes <jendrik.johannes@gmail.com>